[gd_scene load_steps=4 format=3 uid="uid://cuexouewhieoc"]

[ext_resource type="Script" path="res://Scenes/Garden/GardenPlotNode.gd" id="1_8fy57"]
[ext_resource type="Texture2D" uid="uid://bt1s107tbjm4m" path="res://Assets/UI/bar_background.png" id="2_0eg20"]
[ext_resource type="Texture2D" uid="uid://c6iehapq57ncv" path="res://Assets/UI/bar_foreground.png" id="3_j7ci3"]

[node name="GardenPlot" type="Control"]
minimum_size = Vector2(120, 135)
offset_right = 120.0
offset_bottom = 135.0
script = ExtResource( "1_8fy57" )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CoordLabel" type="Label" parent="V"]
offset_right = 120.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 14
text = "(XX,YY)"

[node name="PlantedLabel" type="Label" parent="V"]
offset_top = 27.0
offset_right = 120.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 14
text = "Planted : false"

[node name="GrowProgressBar" type="TextureProgressBar" parent="V"]
minimum_size = Vector2(50, 5)
offset_top = 54.0
offset_right = 120.0
offset_bottom = 59.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource( "2_0eg20" )
texture_progress = ExtResource( "3_j7ci3" )
tint_progress = Color(0, 1, 0, 1)

[node name="WaterProgressBar" type="TextureProgressBar" parent="V"]
minimum_size = Vector2(50, 5)
offset_top = 63.0
offset_right = 120.0
offset_bottom = 68.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource( "2_0eg20" )
texture_progress = ExtResource( "3_j7ci3" )
tint_progress = Color(0, 0, 1, 1)

[node name="PlantButton" type="Button" parent="V"]
offset_top = 72.0
offset_right = 120.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 14
text = "Plant"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="WaterButton" type="Button" parent="V"]
offset_top = 104.0
offset_right = 120.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 14
text = "Water"

[connection signal="pressed" from="V/PlantButton" to="." method="_on_plant_button_pressed"]
[connection signal="pressed" from="V/WaterButton" to="." method="_on_water_button_pressed"]
